--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <title>ご利用アンケート</title>
   <!-- bootstrap CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 <body>
-  <head>
-    <h1>ご利用アンケート</h1>
-  </head>
-  <hr>
-  <hr>  
-  <footer>
-    <p>&copy; company name</p>
-  </footer>
+  <div class="container">
+    <header>
+      <h1>ご利用アンケート</h1>
+    </header>
+  </div>
+    <hr>
+    <hr>  
+  <div class="container">
+    <footer>
+      <p>&copy; company name</p>
+    </footer>
+  </div>
 </body>
 </html>
