--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   <!-- bootstrap: containerで囲む -->
   <div class="container">
     <header>
-      <h1>ご利用アンケート</h1>
+      <div class="row">
+        <div class="col-sm-6">
+          <h1>ご利用アンケート</h1>
+        </div>
+        <div class="col-sm-6 align-right">
+          <a href="/">HOMEへ戻る</a> 
+        </div>
+      </div>
     </header>
   </div>
     <hr>
