--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
       </div>
     </header>
   </div>
-    <hr>
-    <hr>  
+  <hr>
+  <div class="container">
+    <!-- GET:送信した値をURLにくっつける(検索等) POST:そのまま -->
+    <form action="https://book.h2o-space.com/html/form.php" method="POST" class="row">
+      <!-- offset:使わない場所 -->
+      <div class="col-sm-8 offset-sm-2">
+        <p>この度は、本書をご利用いただきありがとうございます。恐れ入りますが、以下のフォームにご記入いただき、送信していただけると幸いです。</p>
+        <label for="name">お名前</label>
+        <input type="text" id="name" name="name">
+      </div>
+    </form>
+  </div>
+  <hr>  
   <div class="container">
     <footer>
       <p>&copy; company name</p>
