--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       <!-- offset:使わない場所 -->
       <div class="col-sm-8 offset-sm-2">
         <p>この度は、本書をご利用いただきありがとうございます。恐れ入りますが、以下のフォームにご記入いただき、送信していただけると幸いです。</p>
-        <label for="name">お名前</label>
-        <input type="text" id="name" name="name">
+        <div class="form-group">
+          <label for="name">お名前</label>
+          <input type="text" id="name" name="name" class="form-control" placeholder="例) 山田　太郎">
+        </div>
       </div>
     </form>
   </div>
