--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
             <option value="その他">その他</option>
           </select>
         </div>
+        <!-- チェックボックス -->
+        <div class="form-group">
+          <label>知りたい内容(複数回答可)</label>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="q1" value="html">
+              HTML
+            </label>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="q1" value="css">
+              CSS
+            </label>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="q1" value="javascript">
+              JavaScript
+            </label>
+          </div>
+        </div>
       </div>
     </form>
   </div>
