--- a/index.html
+++ b/index.html
@@ -65,6 +65,30 @@
             </label>
           </div>
         </div>
+        <!-- ラジオボタン -->
+        <div class="form-group">
+          <label>理解度はいかがですか？</label>
+          <div>
+            <label class="radio">
+              <input type="radio" name="q2" value="1">理解できなかった
+            </label>
+          </div>
+          <div>
+            <label class="radio">
+              <input type="radio" name="q2" value="2">だいたい理解できた
+            </label>
+          </div>
+          <div>
+            <label class="radio">
+              <input type="radio" name="q2" value="3">理解できた
+            </label>
+          </div>
+          <div>
+            <label class="radio">
+              <input type="radio" name="q2" value="4">回答しない
+            </label>
+          </div>
+        </div>
       </div>
     </form>
   </div>
