--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             </label>
           </div>
         </div>
+        <!-- フォーム -->
+        <!-- badge badge-danger -->
+        <div class="form-group">
+          <label for="message">ご意見</label>
+          <textarea name="message" rows="10" class="form-control"></textarea>
+        </div>
+        <button type="submit" class="btn btn-secondary">送信する</button> 
       </div>
     </form>
   </div>
